Add XAML dictionay to customize MenuItem

--- a/Minecraft Bedrock server Wrapper/App.xaml
+++ b/Minecraft Bedrock server Wrapper/App.xaml
@@ -4,6 +4,12 @@
              xmlns:local="clr-namespace:Minecraft_Bedrock_server_Wrapper"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
-         
+
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="MenuItemDictionary.xaml"/>
+            </ResourceDictionary.MergedDictionaries>
+        </ResourceDictionary>
+
     </Application.Resources>
 </Application>
